[tool.poetry]
name = "arduino-cli"
version = "0.0.0"
description = "Project used to run integration tests for the Arduino CLI"
authors = []

[tool.poetry.dependencies]
python = ">=3.8, <3.9.7"
pytest = "6.0.2"
simplejson = "3.17.0"
semver = "2.13.0"
pyserial = "3.4"
pyyaml = "5.4"
prometheus-client = "0.7.1"
requests = "2.22.0"
pytest-timeout = "1.3.4"
invoke = "1.4.1"
filelock = "^3.0.12"
pytest-xdist = "^2.1.0"
pytest_httpserver = "^0.3.5"
GitPython = "^3.1.12"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
mdx-truly-sane-lists = "^1.2"
GitPython = "^3.1.20"
mike = "^1.0.1"
black = "^21.7b0"
flake8 = "^3.9.2"
pep8-naming = "^0.12.1"

[tool.black]
line-length = 120
target-version = ["py38"]
