[tool.poetry]
name = "arduino-cli"
version = "0.0.0"
description = "Project used to run integration tests for the Arduino CLI"
authors = []

[tool.poetry.dependencies]
python = ">=3.8, !=3.9.7, <4"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
mdx-truly-sane-lists = "^1.2"
GitPython = "^3.1.34"
mike = "^1.0.1"
