[tool.poetry]
name = "arduino-cli"
version = "0.0.0"
description = "Project used to run integration tests for the Arduino CLI"
authors = []

[tool.poetry.dependencies]
python = ">3.9.7, <4"
setuptools = "^78.1.1"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
mdx-truly-sane-lists = "^1.2"
GitPython = "^3.1.41"
mike = "^1.0.1"
